--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  
+    <title>CARDS</title>
+</head>
+<body>
+      
+               <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+                  <div class="card-header">IMAGES-ON CARDS
+                    <img src="https://images.unsplash.com/photo-1524492412937-b28074a5d7da?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aW5kaWF8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80" height="100px" width="200px" alt="astrophysics">
+                  </div>
+                  <div class="card-body">PARAGRAPH-ON CARDS
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum fugit suscipit impedit recusandae iste nobis aut cumque maxime veniam voluptatibus eaque corrupti debitis in unde perferendis commodi officia, quasi saepe?</p>
+                  </div>
+                </div>
+                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+                  <div class="card-header">IMAGES-ON CARDS
+                     <img src="https://st.depositphotos.com/1428083/2946/i/600/depositphotos_29460297-stock-photo-bird-cage.jpg"height="100px" width="200px" alt="Nature">
+                  </div>
+                  <div class="card-body">PARAGRAPH-ON  CARDS
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, earum unde! Facilis modi omnis sunt, qui provident eveniet maiores dolores itaque at obcaecati blanditiis. Ipsum nesciunt labore provident asperiores! Dignissimos.</p>
+                  </div>
+                </div>
+</body>
+</html>
